# media-catalog-ms

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  init-catalog-db.sh  pyproject.toml  pytest.ini
app/: config.py  dependencies.py  main.py
app/core/: __init__.py
app/core/error/: actor_exception.py  base_exception.py  base_exception_handler.py  director_exception.py  episode_exception.py  exception_handler.py  invalid_operation_exception.py  movie_exception.py  season_exception.py  show_exception.py  validation_error.py  validation_exception.py
app/core/models/: __init__.py
app/core/use_cases/: use_case.py
app/features/: __init__.py
migrations/: env.py
migrations/versions/: 2025_11_08_1045-4606c3245ada_add_movies_table.py  2025_11_18_2120-58503fbe0be7_add_shows_table.py  2025_11_25_2151-1afe96a2f737_add_seasons_table.py  2025_11_26_0030-6a1142ff75f4_add_episods_table.py  2025_11_29_0237-237fba5935cb_delete_show_id_field_from_episodes_table.py  2025_11_30_0238-25066bcef575_add_directors_and_association_tables.py  2025_11_30_0646-d9d3d5ab4f9e_add_actors_and_association_tables.py  2025_12_05_0832-047313137da2_add_and_fill_countries_and_languages_.py
tests/: conftest.py
tests/dependency_overrides/: session.py
tests/factories/: actor_factories.py  director_factories.py  movie_factories.py  show_factories.py
tests/fixtures/: actor_fixtures.py  country_fixtures.py  database_fixtures.py  director_fixtures.py  episode_fixtures.py  language_fixtures.py  movie_fixtures.py  season_fixtures.py  show_fixtures.py
(+256 files in other folders)
