[project]
name = "media-catalog-ms"
version = "0.1.0"
description = "Media Catalog Microservice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]

[tool.pyright]
include=["app"]

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ["F401"] }
